// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display should return alerted timer 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <div
      className="timer alert"
      onClick={[Function]}
    >
      00
      <span
        style={{}}
      >
        :
      </span>
      00
    </div>
  </div>
</div>
`;

exports[`Display should return started timer 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <div
      className="timer normal"
      onClick={[Function]}
    >
      01
      <span
        style={
          {
            "animation": "blinker 1s linear infinite",
          }
        }
      >
        :
      </span>
      00
    </div>
  </div>
</div>
`;

exports[`Display should return stopped timer 1`] = `
<div
  className="row"
>
  <div
    className="col"
  >
    <div
      className="timer normal"
      onClick={[Function]}
    >
      01
      <span
        style={{}}
      >
        :
      </span>
      00
    </div>
  </div>
</div>
`;
